res/examples/invalid/block_expr_mismatch_return_identifier_declared_in_body_2.eg
let a: number = {
    let b: string = "foo";

    b
};

// out: TypeError: mismatched types: expected type `number` but received `string`
// TODO: See: https://github.com/egonlang/egonlang/issues/19